4.1.1 (2019-XX-XX)
------------------

New features
 -

Enhancements
 -

Bug fixes
 - [core] use the supplied Sieve creds to fetch the IMAP4 separator (#4846)
 - [core] fixed Apple Calendar creation (#4813)


4.1.0 (2019-10-24)
------------------

New features
 - [core] Debian 10 (Buster) support for x86_64 (#4775)
 - [core] now possible to specify which domains you can forward your mails to
 - [core] added support for S/MIME opaque signing (#4582)
 - [web] optionally expand LDAP groups in attendees editor (#2506)

Enhancements
 - [web] avoid saving an empty calendar name
 - [web] prohibit duplicate contact categories in Preferences module
 - [web] improve constrat of text in toolbar with input fields
 - [web] improve labels of auto-reply date settings (#4791)
 - [web] updated Angular Material to version 1.1.20
 - [web] updated CKEditor to version 4.13.0
 - [core] now dynamically detect and use the IMAP separator (#1490)
 - [core] default Sieve port is now 4190 (#4826)
 - [core] updated timezones to version 2019c

Bug fixes
 - [web] properly handle Windows-1256 charset (#4781)
 - [web] fixed saving value of receipt action for main IMAP account
 - [web] fixed search results in Calendar module when targeting all events
 - [web] properly encode URL of cards from exteral sources
 - [web] restore cards selection after automatic refresh (#4809)
 - [web] don't mark draft as deleted when SOGoMailKeepDraftsAfterSend is enabled (#4830)
 - [web] allow single-day vacation auto-reply (#4698)
 - [web] allow import to calendar subscriptions with creation rights
 - [web] handle DST change in Date.daysUpTo (#4842)
 - [web] improved handling of start/end times (#4497, #4845)
 - [web] improved handling of vacation auto-reply activation dates (#4844)
 - [web] added missing contact fields for sorting LDAP sources (#4799)
 - [core] honor IMAPLoginFieldName also when setting IMAP ACLs
 - [core] honor groups when setting IMAP ACLs