@@ -10,6 +10,7 @@ Enhancements
 Bug fixes
  - [core] use the supplied Sieve creds to fetch the IMAP4 separator (#4846)
  - [core] fixed Apple Calendar creation (#4813)
+ - [eas] fixed EAS provisioning support for Outlook/iOS (#4853)
 
 
 4.1.0 (2019-10-24)
